[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/singingSwitch.gd" type="Script" id=1]
[ext_resource path="res://scenes/assets/siningSwitches/singingSwitchBunnyAsset.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/instance/DialogChoiceList.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/instance/dialog/testDialog.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 45.0396, 10.6113 )

[node name="singingSwitch" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.221939, -2.13364 )
shape = SubResource( 1 )

[node name="switchAsset" parent="." instance=ExtResource( 2 )]
position = Vector2( 0.707107, -0.353554 )
scale = Vector2( 0.1, 0.1 )

[node name="DialogChoiceList" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( -20.6017, -39.7051 )
scale = Vector2( 0.5, 0.5 )
z_index = 1

[node name="testDialog" parent="DialogChoiceList" instance=ExtResource( 4 )]
[connection signal="body_entered" from="." to="." method="_on_singingSwitch_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_singingSwitch_body_exited"]
[connection signal="completed_dialog" from="DialogChoiceList" to="." method="_on_DialogChoiceList_completed_dialog"]
